Fix: linux: menubar/toolbar padding disappears by a couple of pixels when the toolbar wraps http://bugs.activestate.com/show_bug.cgi?id=79530
r=toddw (mostly)

(integrated from komodo (trunk) change 24149 by trentm)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@2335 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/gnome/platform.css
+++ b/src/chrome/komodo/skin/plat/gnome/platform.css
@@ -33,3 +33,9 @@ toolbarbutton {
 textbox[type="autocomplete"][disabled="true"] > hbox {
   background-color: -moz-Dialog;
 }
+
+/* Prevent menubar getting squished on toolbar overflow (bug 79530) */
+menubar {
+    min-height: 1.9em;
+}
+
